[project]
name = "darkfind-v5-backend"
version = "0.1.0"
description = "DarkFindV5 - Game data processing pipeline"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0",
    "mypy>=1.8",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["mcp-servers"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
